# syllabus-resources-2025

./: README.md
week1/labs/: w1d1a.ipynb  w1d1b.ipynb  w1d1c.ipynb  w1d2a.ipynb  w1d2b.ipynb  w1d2c.ipynb  w1d3a.ipynb  w1d3b.ipynb  w1d3c.ipynb  w1d4a.ipynb  w1d4b.ipynb  w1d5a.ipynb  w1d5b.ipynb
week1/lecs/: w1d1b.ipynb  w1d2a.ipynb  w1d2b.ipynb  w1d3a.ipynb  w1d3b.ipynb  w1d4a.ipynb  w1d4b.ipynb  w1d5a.ipynb  w1d5b.ipynb
week1/lecs/slides/: w1d2b.pptx  w1d3a.pptx  w1d3b.pptx  w1d4a.pptx  w1d4b.pptx  w1d5a.pptx  w1d5b.pptx
week2/labs/: w2d1a.ipynb  w2d1b.ipynb  w2d1c.ipynb  w2d2proj.ipynb  w2d2shortcuts.ipynb  w2d3a.ipynb  w2d3b.ipynb  w2d4a.ipynb  w2d4b.ipynb  w2d4c.ipynb  w2d5a.ipynb
week2/lecs/: w2d1a.ipynb  w2d1b.ipynb  w2d2a.ipynb  w2d2b.ipynb  w2d3a.ipynb  w2d3b.ipynb  w2d4a.ipynb  w2d4b.ipynb  w2d5a.ipynb
week3/labs/: w3d1b.ipynb  w3d2a.ipynb  w3d2c.ipynb  w3d3a.ipynb  w3d3b.ipynb  w3d4a.ipynb  w3d4b.ipynb  w3d4prac.ipynb
week3/labs/slides/: w3d4a.pptx  w3d5b.pptx
week3/lecs/: boaz_utils.ipynb  w3d1a.ipynb  w3d1b.ipynb  w3d2a.ipynb  w3d2b.ipynb  w3d3a.ipynb  w3d3b.ipynb  w3d4a.ipynb  w3d4b.ipynb  w3d5.ipynb
week4/labs/: w4d1a.ipynb  w4d1b.ipynb  w4d1c.ipynb  w4d2a.ipynb  w4d2b.ipynb  w4d3a.ipynb  w4d3b.ipynb  w4d3c.ipynb
week4/lecs/: .gitignore  LICENSE  README.md  TODOs.md  lec_w4d1a.ipynb  lec_w4d1b.ipynb  lec_w4d2.ipynb  lec_w4d2a.txt  lec_w4d3.ipynb  pyproject.toml  save_norvig_models.py
week4/lecs/jamcoders/: __init__.py  datasets.py  models.py  random.py
week4/lecs/tests/: test_models.py  test_skittles.py  test_tokenization.py
(+2 files in other folders)
